--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "build": "tsc",
+        "test": "jest",
         "lint": "eslint src/**/*.ts"
     },
     "repository": {
@@ -27,14 +28,20 @@
         }
     },
     "devDependencies": {
+        "@types/jest": "^29.5.11",
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "eslint": "^8.56.0",
+        "jest": "^29.7.0",
         "prettier": "^3.1.1",
+        "ts-jest": "^29.1.1",
         "typescript": "^5.3.3"
     },
     "files": [
         "/dist"
-    ]
+    ],
+    "jest": {
+        "preset": "ts-jest"
+    }
 }
